--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "scripts": {
     "dev": "vite"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.0.14",
+    "tailwindcss": "^4.0.14"
   }
 }
