--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "vite": "^6.2.2"
   },
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
